--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.21.1",
     "oidc-client": "^1.11.5",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
