--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "oidc-client": "^1.11.5",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-sortable-hoc": "^2.0.0",
+    "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
