--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "date-fns": "^2.21.1",
+    "draft-js": "^0.11.7",
+    "html-react-parser": "^1.2.7",
+    "jodit-react": "^1.1.1",
     "oidc-client": "^1.11.5",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
